Update and rename group.html to reservation.html

--- a/group.html
+++ b/group.html
@@ -908,6 +908,9 @@
                 </button>
             </div>
         </div>
+        <div style="text-align:center; margin: 25px 0;">
+            <a href="index.html" class="btn btn-secondary">← Retour à l’accueil</a>
+        </div>
     </div>
 
     <script>
