--- a/menu.html
+++ b/menu.html
@@ -451,10 +451,10 @@
                 </div>
             </div>
             <nav>
-                <a href="#">Accueil</a>
+                <a href="index.html">Accueil</a>
                 <a href="#">Menu</a>
-                <a href="#">Réservation</a>
-                <a href="#">Contact</a>
+                <a href="reservation.html">Réservation</a>
+                <a href="login.html">Connexion</a>
             </nav>
         </div>
     </header>
@@ -584,4 +584,5 @@
         <p>© 2025 – Maquis Express. Tous droits réservés.</p>
     </footer>
 </body>
+
 </html>
