Add testimonials section to index.html
Added testimonials section with customer feedback.

--- a/index.html
+++ b/index.html
@@ -188,10 +188,59 @@
             </div>
         </div>
     </section>
+<!-- TÉMOIGNAGES CLIENTS -->
+<section id="temoignages" style="padding:50px 25px;">
+    <h3>Ce que disent nos clients</h3>
 
+    <div class="cards" style="margin-top:25px;">
+
+        <!-- Testimonial 1 -->
+        <div class="card" style="padding:20px; text-align:left;">
+            <div class="stars" style="color:#ffd700; font-size:18px;">★★★★★</div>
+            <p style="color:#444; margin:15px 0;">
+                Une expérience culinaire exceptionnelle ! Les plats sont délicieux, 
+                l'ambiance chaleureuse et le service impeccable.
+            </p>
+            <p style="font-weight:bold; color:#d35400;">KOUDOU Marthin</p>
+            <p style="color:#777; font-size:14px;">Client régulier</p>
+        </div>
+
+        <!-- Testimonial 2 -->
+        <div class="card" style="padding:20px; text-align:left;">
+            <div class="stars" style="color:#ffd700; font-size:18px;">★★★★★</div>
+            <p style="color:#444; margin:15px 0;">
+                Le meilleur restaurant de la ville ! Des saveurs authentiques et un service impeccable.
+            </p>
+            <p style="font-weight:bold; color:#d35400;">KOFFI Juslin</p>
+            <p style="color:#777; font-size:14px;">Amateur de gastronomie</p>
+        </div>
+
+        <!-- Testimonial 3 -->
+        <div class="card" style="padding:20px; text-align:left;">
+            <div class="stars" style="color:#ffd700; font-size:18px;">★★★★★</div>
+            <p style="color:#444; margin:15px 0;">
+                Cadre magnifique et cuisine raffinée. Parfait pour un dîner entre amis !
+            </p>
+            <p style="font-weight:bold; color:#d35400;">DOUKOURE Bernadette</p>
+            <p style="color:#777; font-size:14px;">Visiteuse enchantée</p>
+        </div>
+
+        <!-- Testimonial 4 -->
+        <div class="card" style="padding:20px; text-align:left;">
+            <div class="stars" style="color:#ffd700; font-size:18px;">★★★★☆</div>
+            <p style="color:#444; margin:15px 0;">
+                Une belle découverte ! Menu varié, bon rapport qualité-prix.
+            </p>
+            <p style="font-weight:bold; color:#d35400;">COULIBALY Odette</p>
+            <p style="color:#777; font-size:14px;">Épicurienne</p>
+        </div>
+
+    </div>
+</section>
     <footer>
         © 2025 – Maquis Express. Tous droits réservés.
     </footer>
 
 </body>
 </html>
+
